--- a/rush/main.html
+++ b/rush/main.html
@@ -24,8 +24,8 @@
                     </div>
                 </div>
             </a>
-            <a>
-                <div class="card" id="jeno" onclick="window.location.href='./tsoontho/index.html'">
+            <a href="./tsoontho/index.html">
+                <div class="card" id="jeno">
                     <img src="./assets/images/tsoontho/tsoontho_main.jpg" alt="Image 2">
                     <div class="desc">
                         <my-text medium>Tanawat Soonthorn</my-text>
