--- a/rush/ylimwila/index.html
+++ b/rush/ylimwila/index.html
@@ -4,7 +4,7 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="../assets/images/ylimwila/yongsin_main.jpg" type="image/x-icon">
+        <link rel="shortcut icon" href="../assets/images/ylimwila/kafka.jpg" type="image/x-icon">
         <title>Yongsin</title>
         <!-- minify -->
         <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
@@ -17,20 +17,31 @@
 </head>
 
 <body>
+        <dialog class="nes-dialog is-dark is-rounded" id="dialog-dark-rounded">
+                <form method="dialog">
+                        <p class="title">Dark and Rounded dialog</p>
+                        <p>Alert: this is a dialog.</p>
+                        <menu class="dialog-menu">
+                                <button class="nes-btn">Cancel</button>
+                                <button class="nes-btn is-primary">Confirm</button>
+                        </menu>
+                </form>
+        </dialog>
         <my-nav></my-nav>
+
         <my-section myid="about">
                 <div class="img-container">
                         <div class="nes-container with-title is-centered img-border">
-                                <p class="title" style="background-color: coral;">Oak</p>
+                                <p class="title">Oak</p>
                                 <div class="img">
-                                        <img src="../assets/images/ylimwila/about.jpg" alt="">
+                                        <img src="../assets/images/ylimwila/yongsin_main.jpg" alt="">
                                 </div>
                         </div>
                 </div>
                 <div-column gap="4px">
-                        <h2 class="title">Hello, I'm Yongsin Limwilaikul (Oak)</h2>
-                        <my-text>Aspiring Full-stack Developer</my-text>
-                        <my-text s3 color="white">I am currently a Front-end Developer with 6 months of internship
+                        <h2 class="title typewriter"></h2>
+                        <my-text h5>Aspiring Full-stack Developer</my-text>
+                        <my-text s2 color="white">I am currently a Front-end Developer with 6 months of internship
                                 experience using
                                 React.js,
                                 React Native, and TypeScript at a startup company. During my internship, I had the
@@ -179,7 +190,7 @@
                         </div>
 
                 </div>
-                <a href="../assets/file/oak/resume.pdf" download><button type="button"
+                <a href="../assets/file/oak/Resume_Yongsin.pdf" download><button type="button"
                                 class="nes-btn is-primary">Download
                                 Resume</button></a>
         </my-section>
@@ -192,7 +203,7 @@
                                                 <img src="../assets/images/ylimwila/project/tictactalk.png" alt="">
                                         </div>
                                         <div class="card-content">
-                                                <h3 class="title">TicTacToe with realtime chat</h3>
+                                                <h3 class="title">TicTacToe With Realtime Chat</h3>
                                                 <div class="desc-container">
                                                         <p class="description ellipsisText" id="tictactoe-development">
                                                                 <b>Development: </b>
@@ -200,8 +211,7 @@
                                                                 website
                                                                 with three piece sizes. 1v1 and 2v2 modes, and real-time
                                                                 chat,
-                                                                scoreboard, login/logout system, profile picture upload
-                                                                feature.
+                                                                scoreboard, login/logout system.
                                                         </p>
                                                         <a class="more-text" for="tictactoe-development"
                                                                 onclick="ellipsisText(this)">More</a>
@@ -263,7 +273,8 @@
                                                                 design
                                                                 principles to
                                                                 ensure optimal user
-                                                                experience across various devices and screen sizes.</p>
+                                                                experience across various devices and screen sizes.
+                                                        </p>
                                                         <a class="more-text" for="smurpark-res"
                                                                 onclick="ellipsisText(this)">More</a>
 
@@ -280,8 +291,9 @@
         <footer id="contact" class="nes-container is-dark">
                 <h2 class="title">Contacts</h2>
                 <div class="contact-container">
-                        <a href="https://www.instagram.com/lloakkkkkll/"><i class="nes-icon instagram"></i></a>
-                        <a href="https://github.com/yongsin-oak"><i class="nes-icon github"></i></a>
+                        <a href="https://www.instagram.com/lloakkkkkll/" target="_blank"><i
+                                        class="nes-icon instagram"></i></a>
+                        <a href="https://github.com/yongsin-oak" target="_blank"><i class="nes-icon github"></i></a>
                         <a href="mailto:yongsin.oak@gmail.com"><i class="nes-icon gmail"></i></a>
                 </div>
         </footer>
