--- a/rush/ylimwila/index.html
+++ b/rush/ylimwila/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="../assets/images/ylimwila/kafka.jpg" type="image/x-icon">
-        <title>Yongsin</title>
+        <title>ylimwila</title>
         <!-- minify -->
         <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
         <!-- latest -->
